--- a/packages/avatar/tsconfig.json
+++ b/packages/avatar/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "ES2022",
         "module": "ES2022",
         "lib": [
-            "ES2022"
+            "ES2022",
+            "DOM"
         ],
         "moduleResolution": "bundler",
         "declaration": true,
