--- a/packages/target-electron/package.json
+++ b/packages/target-electron/package.json
@@ -26,7 +26,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "productName": "DeltaChat",
+  "productName": "DeltEcho",
   "homepage": "https://delta.chat",
   "scripts": {
     "check:types": "tsc --noEmit && tsc --noEmit -p runtime-electron || node ./bin/printCheckWarning.js",
