--- a/packages/cognitive/package.json
+++ b/packages/cognitive/package.json
@@ -30,7 +30,9 @@
     "author": "",
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "deep-tree-echo-core": "workspace:*"
+        "deep-tree-echo-core": "workspace:*",
+        "@deltecho/sys6-triality": "workspace:*",
+        "@deltecho/dove9": "workspace:*"
     },
     "devDependencies": {
         "@types/jest": "^29.5.14",
