--- a/packages/orchestrator/package.json
+++ b/packages/orchestrator/package.json
@@ -13,9 +13,9 @@
     "dev": "tsc && node dist/bin/daemon.js",
     "check:types": "tsc --noEmit",
     "clean": "rm -rf dist",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
-    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "orchestrator",
