--- a/packages/orchestrator/package.json
+++ b/packages/orchestrator/package.json
@@ -30,7 +30,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "deep-tree-echo-core": "workspace:*",
-    "@deltecho/cognitive": "workspace:*"
+    "@deltecho/cognitive": "workspace:*",
+    "@deltecho/ipc": "workspace:*"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
