--- a/packages/reasoning/package.json
+++ b/packages/reasoning/package.json
@@ -30,13 +30,15 @@
     "license": "GPL-3.0-or-later",
     "dependencies": {
         "@deltecho/cognitive": "workspace:*",
-        "deep-tree-echo-core": "workspace:*",
         "@duckdb/duckdb-wasm": "^1.28.0",
-        "apache-arrow": "^17.0.0"
+        "apache-arrow": "^17.0.0",
+        "deep-tree-echo-core": "workspace:*",
+        "drizzle-orm": "^0.45.1"
     },
     "devDependencies": {
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.6",
+        "drizzle-kit": "^0.31.8",
         "jest": "^29.7.0",
         "ts-jest": "^29.4.6",
         "typescript": "^5.7.3"
