--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -27,6 +27,10 @@
     ],
     "author": "",
     "license": "GPL-3.0-or-later",
+    "dependencies": {
+        "pixi.js": "^7.4.2",
+        "pixi-live2d-display-lipsyncpatch": "^0.5.0-ls-8"
+    },
     "peerDependencies": {
         "deep-tree-echo-core": "workspace:*"
     },
