--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,6 +31,7 @@
     "@deltachat/message_parser_wasm": "^0.13.0",
     "@deltecho/cognitive": "workspace:*",
     "@deltecho/ui-components": "workspace:*",
+    "@deltecho/avatar": "workspace:*",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@tensorflow-models/mobilenet": "^2.1.1",
