--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "chokidar": "^3.6.0",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.6.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.2",
