--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "check:types": "tsc --noEmit",
     "pretest": "esbuild *.ts --outdir=ts-compiled-for-tests --sourcemap",
-    "test": "NODE_OPTIONS=--enable-source-maps mocha 'tests/**/*.js'"
+    "test": "cross-env NODE_OPTIONS=--enable-source-maps mocha 'tests/**/*.js'"
   },
   "dependencies": {
     "@deltachat/jsonrpc-client": "catalog:",
