--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -18,11 +18,13 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "discord.js": "^14.14.1"
+        "discord.js": "^14.14.1",
+        "@discordjs/voice": "^0.17.0"
     },
     "peerDependencies": {
         "@deltecho/cognitive": "workspace:*",
         "@deltecho/eventa": "workspace:*",
+        "@deltecho/voice": "workspace:*",
         "deep-tree-echo-core": "workspace:*"
     },
     "devDependencies": {
