--- a/packages/target-electron/package.json
+++ b/packages/target-electron/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://delta.chat",
   "scripts": {
     "check:types": "tsc --noEmit && tsc --noEmit -p runtime-electron || node ./bin/printCheckWarning.js",
-    "build4production": "NODE_ENV=production pnpm build && pnpm -w check:types",
+    "build4production": "cross-env NODE_ENV=production pnpm build && pnpm -w check:types",
     "build": "pnpm build:locales && pnpm build:backend && pnpm --filter=@deltachat-desktop/frontend build && pnpm build:compose-frontend",
     "build:locales": "pnpm -w translations:convert",
     "build:backend": "node ./bin/build.js",
@@ -40,10 +40,10 @@
     "watch": "pnpm -w --filter=@deltachat-desktop/frontend watch & pnpm watch:compose-frontend",
     "dev": "pnpm build && pnpm start",
     "dev-inspect": "pnpm build && pnpm start --inspect",
-    "start": "NODE_OPTIONS=--enable-source-maps electron . --devmode --disable-http-cache --translation-watch",
+    "start": "cross-env NODE_OPTIONS=--enable-source-maps electron . --devmode --disable-http-cache --translation-watch",
     "clean": "rm -rf ./bundle_out ./html-dist ./dist",
     "migration-pretest": "esbuild --bundle --sourcemap --platform=node migration-tests/*.ts --outdir=migration-tests/compiled --external:mocha --external:chai --external:adm-zip --external:isomorphic-ws --external:@deltachat/jsonrpc-client --external:@deltachat/stdio-rpc-server --format=esm",
-    "migration-test": "pnpm migration-pretest && NODE_OPTIONS=--enable-source-maps mocha 'migration-tests/compiled/*.js'",
+    "migration-test": "pnpm migration-pretest && cross-env NODE_OPTIONS=--enable-source-maps mocha 'migration-tests/compiled/*.js'",
     "pack:generate_config": "node ./build/gen-electron-builder-config.js && prettier --write ./electron-builder.json5 --log-level silent",
     "pack:patch-node-modules": "node ../../bin/writeFlatDependencies.js packages/target-electron node_modules",
     "pack": "pnpm pack:generate_config && pnpm run pack:patch-node-modules && pnpm pack:all && pnpm -w run reset:node_modules",
