--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.0.0",
+        "deep-tree-echo-orchestrator": "workspace:*",
         "zod": "^3.22.4"
     },
     "devDependencies": {
