--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -29,9 +29,10 @@
     "@deltachat-desktop/shared": "link:../shared",
     "@deltachat/jsonrpc-client": "catalog:",
     "@deltachat/message_parser_wasm": "^0.13.0",
-    "@deltecho/cognitive": "workspace:*",
-    "@deltecho/ui-components": "workspace:*",
     "@deltecho/avatar": "workspace:*",
+    "@deltecho/cognitive": "workspace:*",
+    "@deltecho/reasoning": "workspace:*",
+    "@deltecho/ui-components": "workspace:*",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@tensorflow-models/mobilenet": "^2.1.1",
