--- a/packages/target-electron/package.json
+++ b/packages/target-electron/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@deltachat/jsonrpc-client": "catalog:",
     "@deltachat/stdio-rpc-server": "catalog:",
+    "cheerio": "^1.1.2",
     "mime-types": "catalog:",
     "sass": "catalog:",
     "ws": "7.5.10"
