--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -44,6 +44,7 @@
     "filesize": "^10.1.6",
     "immutable": "^4.3.7",
     "jsqr": "^1.4.0",
+    "lucide-react": "^0.511.0",
     "mime-types": "catalog:",
     "moment": "^2.30.1",
     "path-browserify": "^1.0.1",
