--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,8 +98,96 @@ jobs:
           name: browser-build
           path: browser-build.tar.gz
 
+  build-tauri:
+    name: Build Tauri (${{ matrix.os }})
+    permissions:
+      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.os == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+
+      - name: Install dependencies (ubuntu only)
+        if: matrix.os == 'ubuntu-22.04' || matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+
+      - name: Install Frontend Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build Tauri
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: pnpm build:tauri
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tauri-release-${{ matrix.os }}
+          path: |
+            packages/target-tauri/src-tauri/target/release/bundle/deb/*.deb
+            packages/target-tauri/src-tauri/target/release/bundle/appimage/*.AppImage
+            packages/target-tauri/src-tauri/target/release/bundle/msi/*.msi
+            packages/target-tauri/src-tauri/target/release/bundle/nsis/*.exe
+            packages/target-tauri/src-tauri/target/release/bundle/dmg/*.dmg
+            packages/target-tauri/src-tauri/target/release/bundle/macos/*.app
+          if-no-files-found: warn
+
+  build-packages:
+    name: Build Core & Orchestrator
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+      - run: pnpm install --frozen-lockfile
+      
+      - name: Build Core
+        run: |
+          pnpm build:core
+          cd packages/core
+          pnpm pack
+          mv deep-tree-echo-core-*.tgz ../../deep-tree-echo-core.tgz
+
+      - name: Build Orchestrator
+        run: |
+          pnpm build:orchestrator
+          cd packages/orchestrator
+          pnpm pack
+          mv deep-tree-echo-orchestrator-*.tgz ../../deep-tree-echo-orchestrator.tgz
+      
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-packages
+          path: |
+            deep-tree-echo-core.tgz
+            deep-tree-echo-orchestrator.tgz
+
   create-release:
-    needs: [build-electron, build-browser]
+    needs: [build-electron, build-browser, build-tauri, build-packages]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -113,5 +201,9 @@ jobs:
             electron-release-windows-latest/*
             electron-release-macos-latest/*
             browser-build.tar.gz
+            tauri-release-ubuntu-latest/*
+            tauri-release-windows-latest/*
+            tauri-release-macos-latest/*
+            npm-packages/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
