fix(ci): correct package name for Ubuntu 24.04 Electron build
Change libicns-utils to icnsutils for Ubuntu 24.04 (Noble).

The package was renamed in Ubuntu 24.04:
- Old name: libicns-utils (Ubuntu 22.04 and earlier)
- New name: icnsutils (Ubuntu 24.04+)

This fixes the Electron build error:
'E: Unable to locate package libicns-utils'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libicns-utils graphicsmagick
+          sudo apt-get install -y icnsutils graphicsmagick
 
       - name: Install System Dependencies (Mac)
         if: matrix.os == 'macos-latest'
