fix(ci): add build step before Electron packaging
The Electron packaging step requires html-dist/xdcs to exist, which is
created by the build step. Added 'pnpm --filter=@deltachat-desktop/target-electron build'
before the pack commands to ensure the frontend and static files (including xdcs)
are built and copied to html-dist.

This fixes the error:
'ENOENT: no such file or directory, lstat html-dist/xdcs'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build Frontend and Electron App
+        run: pnpm --filter=@deltachat-desktop/target-electron build
+
       - name: Build Electron (Linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
