--- a/packages/target-browser/package.json
+++ b/packages/target-browser/package.json
@@ -28,6 +28,7 @@
     "ws": "~8.18.3"
   },
   "devDependencies": {
+    "@cloudflare/containers": "^0.1.0",
     "@types/express": "^4.17.25",
     "@types/node": "^20.19.27",
     "@types/resolve-path": "^1.4.3",
