--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        # cache: 'pnpm'  # Disabled for fresh builds
 
     - name: Install Dependencies
       run: pnpm install --frozen-lockfile
