--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "pnpm"
+          # cache: "pnpm"  # Disabled for fresh builds
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
