fix: update wrangler config to use correct Docker build context
- Set context to repo root (../../) so all packages are available
- Specify dockerfile path relative to context
- Fixes: Docker build failing due to missing packages/cognitive/package.json

--- a/packages/target-browser/wrangler.jsonc
+++ b/packages/target-browser/wrangler.jsonc
@@ -5,10 +5,14 @@
   "compatibility_date": "2024-12-01",
 
   // Container configuration
+  // Use context to build from repo root where all packages are available
   "containers": [
     {
       "class_name": "DeltEchoContainer",
-      "image": "./Dockerfile",
+      "image": {
+        "context": "../../",
+        "dockerfile": "packages/target-browser/Dockerfile"
+      },
       "max_instances": 10
     }
   ],
