fix: copy bin/ directory before pnpm install in Dockerfile
- The preinstall script (bin/check-nodejs-version.js) needs to be available
- Copy bin/ directory after package.json files but before pnpm install

--- a/Dockerfile.cloudflare
+++ b/Dockerfile.cloudflare
@@ -18,6 +18,9 @@ COPY packages/runtime/package.json ./packages/runtime/
 COPY packages/avatar/package.json ./packages/avatar/
 COPY packages/cognitive/package.json ./packages/cognitive/
 
+# Copy bin directory for preinstall scripts
+COPY bin/ ./bin/
+
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 
