fix: add package.json with type: module for ESM support in container
- The server.js uses ESM imports but Node.js needs a package.json
  with type: module to recognize .js files as ESM
- Create a minimal package.json in the container's /app directory

--- a/Dockerfile.cloudflare
+++ b/Dockerfile.cloudflare
@@ -74,6 +74,9 @@ COPY --from=builder /app/packages/target-browser/dist ./dist
 # This significantly reduces image size
 COPY --from=deps /app/node_modules ./node_modules
 
+# Create package.json with type: module for ESM support
+RUN echo '{"type": "module", "name": "deltecho-chat-container"}' > package.json
+
 # Create directories for data persistence
 RUN mkdir -p /data/accounts /data/logs /data/background
 
