--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -78,9 +78,17 @@ jobs:
             DEPLOY_STATUS=${PIPESTATUS[0]}
           fi
           
-          # Extract deployment URL if successful
-          DEPLOY_URL=$(grep -oP 'https://[^\s]+' /tmp/deploy_output.txt | head -1 || true)
+          # Extract the Cloudflare Workers deployment URL (format: https://*.workers.dev)
+          # This specifically matches the workers.dev URL, not other URLs in the output
+          DEPLOY_URL=$(grep -oP 'https://[a-zA-Z0-9-]+\.workers\.dev' /tmp/deploy_output.txt | head -1 || true)
+          
+          # If no workers.dev URL found, try the d-*.workers.dev pattern
+          if [ -z "$DEPLOY_URL" ]; then
+            DEPLOY_URL=$(grep -oP 'https://[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+\.workers\.dev' /tmp/deploy_output.txt | head -1 || true)
+          fi
+          
           echo "deployment_url=$DEPLOY_URL" >> $GITHUB_OUTPUT
+          echo "Extracted deployment URL: $DEPLOY_URL"
           
           # Show full output for debugging
           echo "=== Full Wrangler Output ==="
@@ -90,7 +98,7 @@ jobs:
           exit $DEPLOY_STATUS
 
       - name: Comment PR with Preview URL
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && steps.deploy.outputs.deployment_url != ''
         uses: actions/github-script@v7
         with:
           script: |
@@ -104,19 +112,9 @@ jobs:
               });
             }
 
-      - name: Create Deployment Status
+      - name: Log Deployment Info
         if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const deploymentUrl = '${{ steps.deploy.outputs.deployment_url }}';
-            const status = '${{ job.status }}' === 'success' ? 'success' : 'failure';
-            
-            await github.rest.repos.createDeploymentStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              deployment_id: context.payload.deployment?.id || 0,
-              state: status,
-              environment_url: deploymentUrl,
-              description: status === 'success' ? 'Deployed to Cloudflare Containers' : 'Deployment failed'
-            });
+        run: |
+          echo "Deployment URL: ${{ steps.deploy.outputs.deployment_url }}"
+          echo "Job Status: ${{ job.status }}"
+          echo "Event Name: ${{ github.event_name }}"
