fix: include reasoning package in Docker build context
The frontend depends on @deltecho/reasoning which was previously excluded
by .dockerignore. This caused the Docker build to fail with:
'packages/reasoning/package.json: not found'

Removed packages/reasoning from .dockerignore exclusion list.

--- a/.dockerignore
+++ b/.dockerignore
@@ -52,7 +52,7 @@ packages/target-tauri
 packages/integrations
 packages/orchestrator
 packages/mcp
-packages/reasoning
+# packages/reasoning - REQUIRED: frontend depends on @deltecho/reasoning
 
 # Misc
 .DS_Store
