--- a/packages/target-tauri/package.json
+++ b/packages/target-tauri/package.json
@@ -31,7 +31,7 @@
     "@deltachat/jsonrpc-client": "catalog:",
     "@tauri-apps/cli": "^2.9.6",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
-    "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-dialog": "2.6.0",
     "@webxdc/types": "catalog:",
     "esbuild": "^0.25.12",
     "typescript": "^5.9.3"
