--- a/packages/target-tauri/package.json
+++ b/packages/target-tauri/package.json
@@ -8,7 +8,7 @@
     "check:types": "tsc --noEmit -p runtime-tauri",
     "check:webxdc-denied-permissions": "node ../../bin/webxdc-check-permissions-policy-count.js",
     "start": "tauri dev",
-    "build4production": "NODE_ENV=production pnpm build",
+    "build4production": "cross-env NODE_ENV=production pnpm build",
     "build": "pnpm build:locales && pnpm --filter=@deltachat-desktop/frontend build && pnpm build:compose-frontend && pnpm build:html-email-view && pnpm build:webxdc-js",
     "build:locales": "pnpm -w translations:convert",
     "build:runtime-impl": "pnpm esbuild --format=esm --bundle --minify --keep-names --sourcemap --outdir=./html-dist runtime-tauri/runtime.ts",
