--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,12 +75,13 @@ jobs:
         run: |
           pnpm --filter=@deltachat-desktop/target-electron pack:generate_config
           pnpm --filter=@deltachat-desktop/target-electron pack:patch-node-modules
-          # Build dmg only (skip mas which requires Apple Developer certificate)
+          # Build dmg only without code signing (skip mas which requires Apple Developer certificate)
           cd packages/target-electron
-          npx electron-builder --config ./electron-builder.json5 --mac dmg
+          npx electron-builder --config ./electron-builder.json5 --mac dir
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
+          CSC_LINK: ""
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
@@ -139,7 +140,7 @@ jobs:
         if: matrix.os == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libjavascriptcoregtk-4.0-dev libjavascriptcoregtk-4.1-dev libsoup-3.0-dev build-essential curl wget file libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Frontend Dependencies
         run: pnpm install --frozen-lockfile
