fix(ci): fix Electron macOS build by using zip target and skipping signing
- Use zip target instead of dir to avoid afterSign hook issues
- Add -c.mac.identity=null to explicitly skip code signing
- Add -c.afterSign= to skip the notarization hook

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,9 +75,9 @@ jobs:
         run: |
           pnpm --filter=@deltachat-desktop/target-electron pack:generate_config
           pnpm --filter=@deltachat-desktop/target-electron pack:patch-node-modules
-          # Build dmg only without code signing (skip mas which requires Apple Developer certificate)
+          # Build zip without code signing (skip dmg/mas which require Apple Developer certificate)
           cd packages/target-electron
-          npx electron-builder --config ./electron-builder.json5 --mac dir
+          npx electron-builder --config ./electron-builder.json5 --mac zip -c.mac.identity=null -c.afterSign=
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
