--- a/Dockerfile.cloudflare
+++ b/Dockerfile.cloudflare
@@ -1,5 +1,5 @@
 # DeltEcho Chat Browser Target - Cloudflare Containers
-# Multi-stage build for optimal image size
+# Multi-stage build for optimal image size using pnpm deploy
 
 # Stage 1: Build the application
 FROM node:20-slim AS builder
@@ -33,14 +33,19 @@ COPY . .
 # Build the browser target
 RUN pnpm build:browser
 
-# Stage 2: Production image (minimal debian-slim)
+# Use pnpm deploy to create a minimal production bundle
+# This creates a self-contained directory with only production deps
+RUN pnpm deploy --filter @deltachat-desktop/target-browser --prod /deploy
+
+# Stage 2: Production image (minimal)
 FROM node:20-slim AS runner
 
-# Install curl for healthchecks
+# Install curl for healthchecks only
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Download deltachat-rpc-server binary (glibc version for debian)
 ARG DELTACHAT_CORE_VERSION=2.38.0
@@ -48,26 +53,14 @@ RUN curl -L -o /usr/local/bin/deltachat-rpc-server \
     "https://github.com/chatmail/core/releases/download/v${DELTACHAT_CORE_VERSION}/deltachat-rpc-server-x86_64-linux" \
     && chmod +x /usr/local/bin/deltachat-rpc-server
 
-# Install pnpm for production deploy
-RUN npm install -g pnpm
-
 WORKDIR /app
+
+# Copy only the deployed production bundle (minimal node_modules)
+COPY --from=builder /deploy/node_modules ./node_modules
+COPY --from=builder /deploy/package.json ./
 
 # Copy built application from builder stage
 COPY --from=builder /app/packages/target-browser/dist ./dist
-
-# Copy package files for production install
-COPY --from=builder /app/package.json /app/pnpm-lock.yaml /app/pnpm-workspace.yaml ./
-COPY --from=builder /app/packages/target-browser/package.json ./packages/target-browser/
-COPY --from=builder /app/packages/shared/package.json ./packages/shared/
-COPY --from=builder /app/packages/runtime/package.json ./packages/runtime/
-
-# Copy bin directory (needed for preinstall scripts)
-COPY --from=builder /app/bin/ ./bin/
-
-# Install production dependencies only for target-browser
-# Use --filter to only install deps for the browser target and its workspace deps
-RUN pnpm install --frozen-lockfile --prod --filter @deltachat-desktop/target-browser... --ignore-scripts
 
 # Create directories for data persistence
 RUN mkdir -p /data/accounts /data/logs /data/background
@@ -88,5 +81,5 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8080/ || exit 1
 
-# Start the server - use pnpm to resolve workspace dependencies correctly
+# Start the server directly with node (no pnpm needed in production)
 CMD ["node", "dist/server.js"]
