fix(cloudflare): bundle all dependencies for container deployment
The container was crashing with ERR_MODULE_NOT_FOUND for express-session
because the esbuild config marked external packages but pnpm deploy --prod
wasn't properly including them in the container.

This fix:
- Adds CLOUDFLARE_BUILD env var check in build.js
- When CLOUDFLARE_BUILD=true, all dependencies are bundled into server.js
- Sets CLOUDFLARE_BUILD=true in Dockerfile.cloudflare during build

The bundled server.js is now ~1.6MB and self-contained.

--- a/Dockerfile.cloudflare
+++ b/Dockerfile.cloudflare
@@ -30,7 +30,8 @@ RUN pnpm install --frozen-lockfile
 # Copy source code
 COPY . .
 
-# Build the browser target
+# Build the browser target with full bundling for Cloudflare
+ENV CLOUDFLARE_BUILD=true
 RUN pnpm build:browser
 
 # Use pnpm deploy to create a minimal production bundle
